--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ footer .socials a:hover {
     }
 
     .nav-elements {
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
 
 
@@ -423,9 +423,20 @@ footer .socials a:hover {
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 470px) {
     table {
-        
+        font-size: 0.8rem;
+    }
+
+    footer {
         font-size: 0.9rem;
+    }
+
+    nav {
+        height: 60px;
+    }
+
+    .nav-elements {
+        font-size: 1.2rem;
     }
 }
