--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
     box-sizing: border-box;
 }
 
+/*defualt font*/
 html {
     font-size: 10px;
 }
 
+/*body style*/
 body {
     background-color: #FFF9C4;
     font-family: 'Poppins', sans-serif;
@@ -16,11 +18,13 @@ body {
     margin: 0;
 }
 
+/*defult image behaviour*/
 img {
     width: 100%;
     height: auto;
 }
 
+/*main styling, nav and footeris not included in main*/
 main {
     width: 60%;
     min-width: 700px;
@@ -28,7 +32,7 @@ main {
 }
 
 
-
+/*nav styling, flex to make it look good*/
 nav {
     display: flex;
     align-items: center;
@@ -39,13 +43,14 @@ nav {
     white-space: nowrap;
 }
 
-
+/*navbar elements styling, min-content for no overflow*/
 .nav-elements {
     display: flex;
     width: min-content;
     height: 100%;
 }
 
+/*added border*/
 .nav-elements span {
     display: flex;
     align-items: center;
@@ -53,10 +58,12 @@ nav {
     white-space: nowrap;
 }
 
+/*removed last border*/
 .nav-elements span:last-of-type {
     border-right: none;
 }
 
+/*added interative link, added padding to evenly space the anchors*/
 nav a {
     display:flex;
     align-items: center;
@@ -67,11 +74,12 @@ nav a {
     height: 100%;
 }
 
+/*added hover effect*/
 nav a:hover {
     background-color: #FFF9C4;
     color: black;
 }
-
+/*welcome message styling, made it center*/
 header {
     text-align: center;
     margin: 0, auto;
@@ -79,6 +87,7 @@ header {
     border-radius: 10px;
 }
 
+/*made subjects grid*/
 .subjects-overview {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -91,6 +100,7 @@ header {
     margin-bottom: 10px;
 }
 
+/*had the title span the whole column*/
 .subjects-overview h2 {
     grid-column: 1/-1;
     text-align: center;
@@ -102,7 +112,7 @@ header {
     border-radius: 10px
 }
 
-
+/*starting styling the table*/
 #schedule {
     width: 100%;
     background-color: #fff492;
@@ -127,6 +137,7 @@ td {
     border-radius: 10px;
 }
 
+/*empty spacing to make table look good*/
 .spacing {
     background-color: #fff492;
 }
@@ -138,6 +149,7 @@ table {
     border-spacing: 1rem;
 }
 
+/*made activites flex*/
 .activities {
     display: flex;
     flex-direction: column;
@@ -151,6 +163,7 @@ table {
     text-align: center;
 }
 
+/*had some figures be write, while had some be left, made figure grid for easy alignment*/
 .activity-figure-right {
     display: grid;
     background-color: #f9f2b2;
@@ -165,13 +178,14 @@ table {
     border-radius: 15px;
 }
 
+/*made figcaption centered, also moved so that it is at the same coloum as image*/
 .activity-figure-right figcaption {
     text-align: center;
     grid-column: 1/2;
     grid-row: 1/2;
 }
 
-
+/*same as above, but left*/
 .activity-figure-left {
     display: grid;
     background-color: #f9f2b2;
@@ -190,6 +204,7 @@ table {
     text-align: center;
 }
 
+/*made annoucments grid*/
 #announcements {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -203,6 +218,7 @@ table {
     padding-bottom: 10px;
 }
 
+/*made a all single announcments span the whole hight of the available space*/
 .announcement {
     background-color: #f9f2b2;
     border-radius: 15px;
@@ -215,6 +231,7 @@ table {
     grid-column: 1/3;
 }
 
+/*made teachers flex*/ 
 #teachers-info {
     display: flex;
     flex-direction: column;
@@ -224,6 +241,7 @@ table {
     margin-bottom: 30px;
 }
 
+/*make figures flex too, and made them evenly spaced*/
 #teachers-info figure {
     display: flex;
     justify-content: space-evenly;
@@ -247,6 +265,7 @@ table {
     border-radius: 15px;
 }   
 
+/*made about us just a simple sectino, no flex or grid*/
 #about-us {
     background-color: #fff492;
     padding: 10px;
@@ -264,6 +283,7 @@ table {
     margin-bottom: 10px;
 }
 
+/*made footer flex with space between*/
 footer {
     background-color: #81D4FA;
     text-align: center;
@@ -277,6 +297,7 @@ footer {
 footer p {
     margin: 0;
 }
+/*made social div flex, and centered the icons*/
 footer .socials {
     display: flex;
     justify-content: center;
@@ -285,12 +306,13 @@ footer .socials {
     font-size: 40px;
 }
 
+/*removed underline*/
 footer a {
     text-decoration: none;
     color:#f9f2b2
 }
 
-
+/*made icons block and added border*/
 footer .socials span {
     display: block;
     height: 100%;
@@ -302,6 +324,7 @@ footer .socials span:last-of-type {
     border-right: none;
 }
 
+/*centered the image icons*/
 footer .socials a {
     display: flex;
     align-items: center;
@@ -310,12 +333,16 @@ footer .socials a {
     color: #f9f2b2;
 }
 
+/*added hover effect*/
 footer .socials a:hover {
     background-color: #FFF9C4;
     color: black;
 }
 
+
+/*for desktop small screen*/
 @media (max-width: 720px) {
+    /*made nav direction down*/
     nav {
         flex-direction: column;
         justify-content: center;
@@ -326,6 +353,7 @@ footer .socials a:hover {
         margin: 0;
     }
 
+    /*changed width of main*/
     main {
         min-width: 200px;
         width: 500px;
@@ -337,11 +365,13 @@ footer .socials a:hover {
         font-size: 1.2rem;
     }
 
+    /*made image come first than teacher description*/
     .teachers-image {
         flex-direction: column;
     }
 }
 
+/*for mobiles*/
 @media screen and (max-width: 550px) {
     main {
         width: 95%;
@@ -362,6 +392,7 @@ footer .socials a:hover {
         grid-template-columns: 1fr 1fr;
     }
 
+    /*made footer grid, to make icons come first, than text*/
     footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
